# orchestkit

./: .claude-plugins  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .orphaned_at  .release-please-config.json  .release-please-manifest.json  ADR-caching-strategy.md  ADR-database-selection.md  AGENTS.md  BUNDLE-DESIGN.md  CC-2.1.7-JSON-OUTPUT-FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_PRODUCTION.md  Dockerfile  IMPROVEMENT-PLAN.md  LANGGRAPH_SKILLS_COMPLIANCE_REPORT.md  LANGGRAPH_SKILLS_IMPROVEMENT_PLAN.md  PLAN.md  PRD-team-invitation-system.md  README.md  TRANSFORMATION_SUMMARY.md  agent-browser-audit.html  glama.json  microservices-talk.html  migration-timeline.html  mypy.ini  node_modules  package-lock.json  package.json  plugin-metadata.json  plugin.json  pnpm-lock.yaml  pyproject.toml  release-notes.md  server.json  (+5 more)
.claude/: HANDOFF.md  HANDOFF.md.consumed  agent-routing-analysis-feb2026.md  audit-allowlist.json  keybindings.json  plan.md  release-sync-config.json  settings.json
.claude-plugin/: README.md  marketplace-modular.json.example  marketplace.json  plugin.json
.cmux/: README.md  cmux.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  action-versions.md  dependabot.yml  zizmor.yml
.vercel/: project.json
agents/: backend-system-architect.md  business-case-builder.md  code-quality-reviewer.md  data-pipeline-engineer.md  database-engineer.md  debug-investigator.md  frontend-ui-developer.md  llm-integrator.md  market-intelligence.md  metrics-architect.md  multimodal-specialist.md  prioritization-analyst.md  product-strategist.md  rapid-ui-designer.md  release-engineer.md  requirements-translator.md  security-auditor.md  security-layer-auditor.md  system-design-reviewer.md  test-generator.md  ux-researcher.md  workflow-architect.md
commands/: assess-complexity.md
designs/: README.md  ascii-design-system.md
docs/: DEMO_PRODUCTION.md  cc-2188-integration-playground.html  cc-release-integration-sop.md  codex-compatibility-playground.html  (+7 more)
tests/evals/scaffolds/python-fastapi/: pyproject.toml
tests/evals/scaffolds/python-fastapi/app/: __init__.py
(+8385 files in other folders)
